# LanWatch

./: .gitignore  README.md  config.example.yaml  go.mod  lanwatchgo  pyproject.toml
lanwatch/: __init__.py  cli.py  config.py  database.py  models.py  network.py  report.py  runner.py  scanner.py  server.py  vendor.py
lanwatchgo/: README.md  config.example.json  go.mod  main.go  main_test.go
